# qdrant_vector_storage

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: auto-publish.yml  python-publish.yml
qdrant_vector_storage/: __init__.py
qdrant_vector_storage/async_client/: __init__.py  client.py
qdrant_vector_storage/common/: base.py  converters.py  exceptions.py  models.py
qdrant_vector_storage/sync_client/: __init__.py  client.py
tests/: test.py
