[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qdrant_vector_storage"
version = "0.1.5"
description = "Sync/async Qdrant clients with Markdown chunking and pluggable embedding pipeline."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [{name = "Nikita"}]
keywords = ["qdrant", "vector", "embeddings", "rag", "markdown"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


dependencies = [
  "qdrant-client>=1.9.0",
  "pydantic>=2.0.0",
]


[project.urls]
Homepage = "https://github.com/opchik/qdrant_vector_storage"
Repository = "https://github.com/opchik/qdrant_vector_storage"
Issues = "https://github.com/opchik/qdrant_vector_storage/issues"

[tool.setuptools]
include-package-data = true
packages = {find = {where = ["."], exclude = ["tests*", "examples*"]}}

[tool.ruff]
line-length = 100
target-version = "py39"

